Fixes issues with dark mode and assembly line
* an upstream work around to make checkboxes and radio buttons dark
* makes the radial markers work on the interview list page
* makes terms and footer links light for correct contrast

--- a/docassemble/AssemblyLine/data/static/interview_list.css
+++ b/docassemble/AssemblyLine/data/static/interview_list.css
@@ -32,9 +32,15 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background: #ddd;
+  --radial-background: #ddd;
+  background: var(--radial-background);
   margin: .2rem;
 }
+
+[data-bs-theme=dark] .radialProgressBar {
+  --radial-background: #212529;
+}
+
 .radialProgressBar .overlay {
   border-radius: 50%;
   width: 2.3rem;
@@ -45,57 +51,61 @@
   padding-top: 10%;
 }
 
+[data-bs-theme=dark] .radialProgressBar .overlay {
+  background: #212529;
+}
+
 .progress-0 {
-  background-image: -webkit-linear-gradient(left, #ddd 50%, transparent 50%), -webkit-linear-gradient(left, #028cd5 50%, #ddd 50%);
-  background-image: linear-gradient(90deg, #ddd 50%, transparent 50%), linear-gradient(90deg, #028cd5 50%, #ddd 50%);
+  background-image: -webkit-linear-gradient(left, var(--radial-background) 50%, transparent 50%), -webkit-linear-gradient(left, #028cd5 50%, var(--radial-background) 50%);
+  background-image: linear-gradient(90deg, var(--radial-background) 50%, transparent 50%), linear-gradient(90deg, #028cd5 50%, var(--radial-background) 50%);
 }
 
 .progress-10 {
-  background-image: -webkit-linear-gradient(36deg, #ddd 50%, transparent 50%), -webkit-linear-gradient(left, #028cd5 50%, #ddd 50%);
-  background-image: linear-gradient(54deg, #ddd 50%, transparent 50%), linear-gradient(90deg, #028cd5 50%, #ddd 50%);
+  background-image: -webkit-linear-gradient(36deg, var(--radial-background) 50%, transparent 50%), -webkit-linear-gradient(left, #028cd5 50%, var(--radial-background) 50%);
+  background-image: linear-gradient(54deg, var(--radial-background) 50%, transparent 50%), linear-gradient(90deg, #028cd5 50%, var(--radial-background) 50%);
 }
 
 .progress-20 {
-  background-image: -webkit-linear-gradient(72deg, #ddd 50%, transparent 50%), -webkit-linear-gradient(left, #028cd5 50%, #ddd 50%);
-  background-image: linear-gradient(18deg, #ddd 50%, transparent 50%), linear-gradient(90deg, #028cd5 50%, #ddd 50%);
+  background-image: -webkit-linear-gradient(72deg, var(--radial-background) 50%, transparent 50%), -webkit-linear-gradient(left, #028cd5 50%, var(--radial-background) 50%);
+  background-image: linear-gradient(18deg, var(--radial-background) 50%, transparent 50%), linear-gradient(90deg, #028cd5 50%, var(--radial-background) 50%);
 }
 
 .progress-30 {
-  background-image: -webkit-linear-gradient(108deg, #ddd 50%, transparent 50%), -webkit-linear-gradient(left, #028cd5 50%, #ddd 50%);
-  background-image: linear-gradient(-18deg, #ddd 50%, transparent 50%), linear-gradient(90deg, #028cd5 50%, #ddd 50%);
+  background-image: -webkit-linear-gradient(108deg, var(--radial-background) 50%, transparent 50%), -webkit-linear-gradient(left, #028cd5 50%, var(--radial-background) 50%);
+  background-image: linear-gradient(-18deg, var(--radial-background) 50%, transparent 50%), linear-gradient(90deg, #028cd5 50%, var(--radial-background) 50%);
 }
 
 .progress-40 {
-  background-image: -webkit-linear-gradient(144deg, #ddd 50%, transparent 50%), -webkit-linear-gradient(left, #028cd5 50%, #ddd 50%);
-  background-image: linear-gradient(-54deg, #ddd 50%, transparent 50%), linear-gradient(90deg, #028cd5 50%, #ddd 50%);
+  background-image: -webkit-linear-gradient(144deg, var(--radial-background) 50%, transparent 50%), -webkit-linear-gradient(left, #028cd5 50%, var(--radial-background) 50%);
+  background-image: linear-gradient(-54deg, var(--radial-background) 50%, transparent 50%), linear-gradient(90deg, #028cd5 50%, var(--radial-background) 50%);
 }
 
 .progress-50 {
-  background-image: -webkit-linear-gradient(right, #ddd 50%, transparent 50%), -webkit-linear-gradient(left, #028cd5 50%, #ddd 50%);
-  background-image: linear-gradient(-90deg, #ddd 50%, transparent 50%), linear-gradient(90deg, #028cd5 50%, #ddd 50%);
+  background-image: -webkit-linear-gradient(right, var(--radial-background) 50%, transparent 50%), -webkit-linear-gradient(left, #028cd5 50%, var(--radial-background) 50%);
+  background-image: linear-gradient(-90deg, var(--radial-background) 50%, transparent 50%), linear-gradient(90deg, #028cd5 50%, var(--radial-background) 50%);
 }
 
 .progress-60 {
-  background-image: -webkit-linear-gradient(left, #028cd5 50%, transparent 50%), -webkit-linear-gradient(36deg, #028cd5 50%, #ddd 50%);
-  background-image: linear-gradient(90deg, #028cd5 50%, transparent 50%), linear-gradient(54deg, #028cd5 50%, #ddd 50%);
+  background-image: -webkit-linear-gradient(left, #028cd5 50%, transparent 50%), -webkit-linear-gradient(36deg, #028cd5 50%, var(--radial-background) 50%);
+  background-image: linear-gradient(90deg, #028cd5 50%, transparent 50%), linear-gradient(54deg, #028cd5 50%, var(--radial-background) 50%);
 }
 
 .progress-70 {
-  background-image: -webkit-linear-gradient(left, #028cd5 50%, transparent 50%), -webkit-linear-gradient(72deg, #028cd5 50%, #ddd 50%);
-  background-image: linear-gradient(90deg, #028cd5 50%, transparent 50%), linear-gradient(18deg, #028cd5 50%, #ddd 50%);
+  background-image: -webkit-linear-gradient(left, #028cd5 50%, transparent 50%), -webkit-linear-gradient(72deg, #028cd5 50%, var(--radial-background) 50%);
+  background-image: linear-gradient(90deg, #028cd5 50%, transparent 50%), linear-gradient(18deg, #028cd5 50%, var(--radial-background) 50%);
 }
 
 .progress-80 {
-  background-image: -webkit-linear-gradient(left, #028cd5 50%, transparent 50%), -webkit-linear-gradient(108deg, #028cd5 50%, #ddd 50%);
-  background-image: linear-gradient(90deg, #028cd5 50%, transparent 50%), linear-gradient(-18deg, #028cd5 50%, #ddd 50%);
+  background-image: -webkit-linear-gradient(left, #028cd5 50%, transparent 50%), -webkit-linear-gradient(108deg, #028cd5 50%, var(--radial-background) 50%);
+  background-image: linear-gradient(90deg, #028cd5 50%, transparent 50%), linear-gradient(-18deg, #028cd5 50%, var(--radial-background) 50%);
 }
 
 .progress-90 {
-  background-image: -webkit-linear-gradient(left, #028cd5 50%, transparent 50%), -webkit-linear-gradient(144deg, #028cd5 50%, #ddd 50%);
-  background-image: linear-gradient(90deg, #028cd5 50%, transparent 50%), linear-gradient(-54deg, #028cd5 50%, #ddd 50%);
+  background-image: -webkit-linear-gradient(left, #028cd5 50%, transparent 50%), -webkit-linear-gradient(144deg, #028cd5 50%, var(--radial-background) 50%);
+  background-image: linear-gradient(90deg, #028cd5 50%, transparent 50%), linear-gradient(-54deg, #028cd5 50%, var(--radial-background) 50%);
 }
 
 .progress-100 {
-  background-image: -webkit-linear-gradient(left, #028cd5 50%, transparent 50%), -webkit-linear-gradient(right, #028cd5 50%, #ddd 50%);
-  background-image: linear-gradient(90deg, #028cd5 50%, transparent 50%), linear-gradient(-90deg, #028cd5 50%, #ddd 50%);
+  background-image: -webkit-linear-gradient(left, #028cd5 50%, transparent 50%), -webkit-linear-gradient(right, #028cd5 50%, var(--radial-background) 50%);
+  background-image: linear-gradient(90deg, #028cd5 50%, transparent 50%), linear-gradient(-90deg, #028cd5 50%, var(--radial-background) 50%);
 }
