--- a/docassemble/AssemblyLine/data/static/styles.css
+++ b/docassemble/AssemblyLine/data/static/styles.css
@@ -126,16 +126,44 @@ input[type=number] {
   min-width: 8em;
 }
 
-/* Make the footer links and da terms slightly darker for better contrast */
+/* Make the footer links and da terms slightly darker in light mode 
+  and lighter in dark mode for better contrast */
 footer a {
   color: #0264F7;
 }
+
+[data-bs-theme=dark] footer a {
+  color: #3988FF
+}
+
 .daterm {
   color: #3b842c;
   text-decoration: dashed;
   text-decoration-line: underline;
 }
 
+[data-bs-theme=dark] .daterm {
+  color: #4fa23e;
+}
+
 .daquestionbackbutton {
   --bs-btn-focus-shadow-rgb: 49,132,253;
+}
+
+/* An upstream fix for dark mode, with radio buttons and checkboxes. See https://github.com/jhpyle/docassemble/pull/718 */
+[data-bs-theme=dark] .btn-light.dalabelauty {
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #212529;
+  --bs-btn-border-color: #212529;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #424649;
+  --bs-btn-hover-border-color: #373b3e;
+  --bs-btn-focus-shadow-rgb: 66, 70, 73;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #4d5154;
+  --bs-btn-active-border-color: #373b3e;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: #212529;
+  --bs-btn-disabled-border-color: #212529;
 }
